# challenge-4-advance/docs/swagger.yaml
@@ -123,6 +123,33 @@ paths:
       tags:
       - book
   /book/{book_id}:
+    delete:
+      parameters:
+      - description: id of book
+        in: path
+        name: book_id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/microservices_challenge-4-advance_domain_book.Book'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/book.MessageResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/book.MessageResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/book.MessageResponse'
+      summary: Delete books by ID
+      tags:
+      - book
     get:
       parameters:
       - description: id of book
@@ -139,11 +166,42 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/book.MessageResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/book.MessageResponse'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/book.MessageResponse'
       summary: Get books by ID
+      tags:
+      - book
+    put:
+      parameters:
+      - description: id of book
+        in: path
+        name: book_id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/microservices_challenge-4-advance_domain_book.Book'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/book.MessageResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/book.MessageResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/book.MessageResponse'
+      summary: Update books by ID
       tags:
       - book
 swagger: "2.0"
